--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,6 +1,10 @@
+<div class="jumbotron">
+
 <h1>Editing Item</h1>
 
 <%= render 'form', item: @item %>
 
 <%= link_to 'Show', @item %> 
 <%= link_to 'Back', items_path %>
+
+</div>
