--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -11,7 +11,7 @@
 
 <%= form_for @item do |form| %>
   <br/><strong>Winning User ID:</strong>
-  <%= form.text_field :int %>
+  <%= form.text_field :integer %>
   <%= form.submit "Enter", class: 'btn btn-warning'%>
 <% end %>
 
